objects/ESC_Contact_Special_Instruction__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Contact_SI_Status__c</fullName>
        <description>This  will hold the special instructionStatus  for contact</description>
        <label>Contact SI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Special Instructions</relationshipLabel>
        <relationshipName>Contact_Special_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_Special_Instruction__c</fullName>
        <label>Special Instruction</label>
        <referenceTo>ESC_Special_Instruction__c</referenceTo>
        <relationshipLabel>Contact Special Instructions</relationshipLabel>
        <relationshipName>Contact_Special_Instructions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_Status__c</fullName>
        <description>This will hold the special instruction for contact</description>
        <formula>TEXT(ESC_Special_Instruction__r.ESC_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Contact Special Instruction</label>
    <nameField>
        <displayFormat>CSI-{00000000}</displayFormat>
        <label>Contact Special Instruction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Special Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ESC_Special_Instruction_Change</fullName>
        <active>false</active>
        <description>The Special Instruction  Cannot be modified After Creation.</description>
        <errorConditionFormula>OR(ISCHANGED( ESC_Contact__c ),ISCHANGED(  ESC_Special_Instruction__c))</errorConditionFormula>
        <errorMessage>The Special Instruction  Cannot be modified After Creation.Please Navigate to Special Instruction to perform any update</errorMessage>
    </validationRules>
</CustomObject>